# TTAI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TTAI-Web/: .env.development  index.html  package-lock.json  package.json  vite.config.js
TTAI-Web/chat/: index.html
TTAI-Web/src/: App.css  App.jsx  chat.css  chat.jsx  index.css
TTAI/app/: main.cpp
TTAI/include/: chat_server.h
TTAI/include/ai_utils/: ai_factory.h  ai_strategy.h
TTAI/include/database_service/: database_service.h
TTAI/include/user/: user_service.h
TTAI/include/utils/: file_util.hpp
TTAI/src/: chat_server.cpp
TTAI/src/ai_utils/: ai_strategy.cpp
TTAI/src/database_service/: database_service.cpp
TTAI/src/handlers/: ai_chat_page.cpp  ai_get_all_title.cpp  ai_get_history.cpp  ai_get_title.cpp  ai_home_page.cpp  ai_login.cpp  ai_logout.cpp  ai_process_message.cpp  ai_register.cpp
TTAI/src/user/: user_service.cpp
http_server/: CMakeLists.txt
http_server/include/http_server/: http_context.h  http_request.h  http_response.h  http_server.h
http_server/include/router/: router.h
http_server/include/ssl/: ssl_config.h  ssl_connection.h  ssl_context.h
http_server/src/http_server/: http_context.cpp  http_server.cpp
http_server/src/router/: router.cpp
http_server/src/ssl/: ssl_config.cpp  ssl_connection.cpp  ssl_context.cpp
http_server/test/: test_main.cpp
mysql_pool/: CMakeLists.txt
mysql_pool/include/: db_connection.h  db_connection_pool.h
mysql_pool/src/: db_connection.cpp  db_connection_pool.cpp
mysql_pool/test/: test_main.cpp
